--- a/templates/about.html
+++ b/templates/about.html
@@ -278,48 +278,48 @@
             </div>
         </div>
     </section>
-    <section class="section-sec lighter-grey">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6 mb-4 wow fadeInLeft centeralign">
-                    <h2 class="subhead-small-blk">They Trust Us</h2>
-                    <p>Our thriving clientele is a reflection of how we score quick upturn for our customers! Span
-                        Global Services serves SMBs to large technology organizations. Our offerings compass data-driven
-                        marketing, data management solutions and advisory services.
-                        We present our clients with bespoke solutions that deliver results. Our eye for detail and
-                        insightful data invigorates our clients’ digital presence and builds up their market share. </p>
-                </div>
-                <div class="col-lg-6 mb-4 wow fadeInLeft centeralign">
-                    <div class="row">
-                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="/static/assets/img/icon/1.png" class="respo-img"
-                                alt="VMWare" title="VMWare" /> </div>
-                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="/static/assets/img/icon/2.png" class="respo-img"
-                                alt="Lawson" title="Lawson" /> </div>
-                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="/static/assets/img/icon/3.png" class="respo-img"
-                                alt="Standard & Poor's" title="Standard & Poor's" /> </div>
-                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="/static/assets/img/icon/4.png" class="respo-img"
-                                alt="Applied Biosystems" title="Applied Biosystems" /> </div>
-                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="/static/assets/img/icon/5.png" class="respo-img"
-                                alt="Nationwide" title="Nationwide" /> </div>
-                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="/static/assets/img/icon/6.png" class="respo-img"
-                                alt="Bank of America" title="Bank of America" /> </div>
-                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="/static/assets/img/icon/7.png" class="respo-img"
-                                alt="TriNet" title="TriNet" /> </div>
-                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img
-                                src="/static/assets/img/icon/8.png" class="respo-img"
-                                alt="Cisco" title="Cisco" /> </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+<!--    <section class="section-sec lighter-grey">-->
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-6 mb-4 wow fadeInLeft centeralign">-->
+<!--                    <h2 class="subhead-small-blk">They Trust Us</h2>-->
+<!--                    <p>Our thriving clientele is a reflection of how we score quick upturn for our customers! Affluence-->
+<!--                        Business Inc serves SMBs to large technology organizations. Our offerings compass data-driven-->
+<!--                        marketing, data management solutions and advisory services.-->
+<!--                        We present our clients with bespoke solutions that deliver results. Our eye for detail and-->
+<!--                        insightful data invigorates our clients’ digital presence and builds up their market share. </p>-->
+<!--                </div>-->
+<!--                <div class="col-lg-6 mb-4 wow fadeInLeft centeralign">-->
+<!--                    <div class="row">-->
+<!--                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img-->
+<!--                                src="/static/assets/img/icon/1.png" class="respo-img"-->
+<!--                                alt="VMWare" title="VMWare" /> </div>-->
+<!--                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img-->
+<!--                                src="/static/assets/img/icon/2.png" class="respo-img"-->
+<!--                                alt="Lawson" title="Lawson" /> </div>-->
+<!--                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img-->
+<!--                                src="/static/assets/img/icon/3.png" class="respo-img"-->
+<!--                                alt="Standard & Poor's" title="Standard & Poor's" /> </div>-->
+<!--                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img-->
+<!--                                src="/static/assets/img/icon/4.png" class="respo-img"-->
+<!--                                alt="Applied Biosystems" title="Applied Biosystems" /> </div>-->
+<!--                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img-->
+<!--                                src="/static/assets/img/icon/5.png" class="respo-img"-->
+<!--                                alt="Nationwide" title="Nationwide" /> </div>-->
+<!--                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img-->
+<!--                                src="/static/assets/img/icon/6.png" class="respo-img"-->
+<!--                                alt="Bank of America" title="Bank of America" /> </div>-->
+<!--                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img-->
+<!--                                src="/static/assets/img/icon/7.png" class="respo-img"-->
+<!--                                alt="TriNet" title="TriNet" /> </div>-->
+<!--                        <div class="col-md-3 col-4 mb-2 text-center wow fadeInLeft"> <img-->
+<!--                                src="/static/assets/img/icon/8.png" class="respo-img"-->
+<!--                                alt="Cisco" title="Cisco" /> </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </section>-->
     <section class="free-quote-sec">
         <div class="container">
             <div class="row">
