--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -173,31 +173,32 @@
                         89449.</p>
                     <p style="text-align:Justify;"><strong>Please note:</strong> We cannot always delete records of all
                         historical data, and this is in compliance to legal audits and financial reporting purposes.</p>
-                    <p><strong>2.4.2. Opt-out Policy:</strong></p>
-                    <p>Upon your request, Affluence Business Inc will:</p>
-                    <ul class="space-list">
-                        <li>Allow any subscriber to "opt out" of further promotional contacts/li&gt;</li>
-                        <li>Use reasonable efforts to allow subscriber to update/correct personal information previously
-                            submitted which he/she states is erroneous to the extent such activities will not compromise
-                            privacy or security interests
-                        </li>
-                        <li>Initiate reasonable efforts to functionally delete the subscriber and his/her personal
-                            information from its database. Visitors should be aware that it might be impossible to
-                            completely delete erroneous information or a visitor's personal information without some
-                            residual information remaining in its database because of backups and records of deletions.
-                        </li>
-                    </ul>
-                    <p style="text-align:Justify;"><strong>2.4.3.</strong> In case of breaches or any other data-related
-                        concerns (subject to this privacy statement), subjects may lodge complaints with their regional
-                        data privacy regulator. For UK citizens, it is the Information Commissioner’s Office. Concerns
-                        can be directly reported at <a href="http://www.ico.org.uk/concerns">http://www.ico.org.uk/concerns</a>.
-                    </p>
-                    <p style="text-align:Justify;"><strong>2.4.4.</strong> We retain subject data for as long as it is
-                        reasonably necessary, for providing our Services. Such data is anonymized in a reasonably
-                        practical time-frame after the subject stops using our Services.</p>
-                    <p style="text-align:Justify;">2.4.5. Sufficient safeguards are taken while transferring subject
-                        data to other countries. We are obliged to provide a copy of said safeguards and related privacy
-                        rights on request by the subjects in concern.</p>
+<!--                    <p>-->
+<!--                        <strong>2.4.2. Opt-out Policy:</strong></p>-->
+<!--                    <p>Upon your request, Affluence Business Inc will:</p>-->
+<!--                    <ul class="space-list">-->
+<!--                        <li>Allow any subscriber to "opt out" of further promotional contacts/li&gt;</li>-->
+<!--                        <li>Use reasonable efforts to allow subscriber to update/correct personal information previously-->
+<!--                            submitted which he/she states is erroneous to the extent such activities will not compromise-->
+<!--                            privacy or security interests-->
+<!--                        </li>-->
+<!--                        <li>Initiate reasonable efforts to functionally delete the subscriber and his/her personal-->
+<!--                            information from its database. Visitors should be aware that it might be impossible to-->
+<!--                            completely delete erroneous information or a visitor's personal information without some-->
+<!--                            residual information remaining in its database because of backups and records of deletions.-->
+<!--                        </li>-->
+<!--                    </ul>-->
+<!--                    <p style="text-align:Justify;"><strong>2.4.3.</strong> In case of breaches or any other data-related-->
+<!--                        concerns (subject to this privacy statement), subjects may lodge complaints with their regional-->
+<!--                        data privacy regulator. For UK citizens, it is the Information Commissioner’s Office. Concerns-->
+<!--                        can be directly reported at <a href="http://www.ico.org.uk/concerns">http://www.ico.org.uk/concerns</a>.-->
+<!--                    </p>-->
+<!--                    <p style="text-align:Justify;"><strong>2.4.4.</strong> We retain subject data for as long as it is-->
+<!--                        reasonably necessary, for providing our Services. Such data is anonymized in a reasonably-->
+<!--                        practical time-frame after the subject stops using our Services.</p>-->
+<!--                    <p style="text-align:Justify;">2.4.5. Sufficient safeguards are taken while transferring subject-->
+<!--                        data to other countries. We are obliged to provide a copy of said safeguards and related privacy-->
+<!--                        rights on request by the subjects in concern.</p>-->
                     <h3 class="normal-head">3. Data Security &amp; Confidentiality</h3>
                     <p style="text-align:Justify;">At Affluence Business Inc, we give utmost importance to safeguard your
                         privacy, at every step of processing or storing your personal information. We take every step to
