--- a/templates/geo-targeted-lists/australia-business-email-list.html
+++ b/templates/geo-targeted-lists/australia-business-email-list.html
@@ -393,8 +393,8 @@
                     </div>
                     <div class="col-lg-7 section-fpad wow fadeInLeft">
                         <p>Wondering what all you’ve got in store for you when you commit to <a
-                                href=/ title="Affluence Business Inc"><strong>Span
-                                    Global Services</strong></a> as your data partner for your <strong>Australian
+                                href=/ title="Affluence Business Inc"><strong>Affluence
+                                    Business Inc</strong></a> as your data partner for your <strong>Australian
                                 Mailing Database</strong>? Here is an extensive list of the benefits you can expect to
                             receive </p>
                         <ul class="space-list-white">
