--- a/templates/geo-targeted-lists/canada-business-email-list.html
+++ b/templates/geo-targeted-lists/canada-business-email-list.html
@@ -301,8 +301,8 @@
                     <div class="col-lg-12 wow fadeInLeft">
                          <h2 class="subhead-small-blk">Get Quality Customers with Canadian Business Heads Mailing
                               Addresses</h2>
-                         <p><a href=/ title="Affluence Business Inc"><strong>Span
-                                        Global Services</strong></a> has been a pioneer in the data industry for over a
+                         <p><a href=/ title="Affluence Business Inc"><strong>Affluence
+                                        Business Inc</strong></a> has been a pioneer in the data industry for over a
                               decade. Our constant efforts to offer superior quality data has benefitted our clients
                               across business verticals, especially IT firms. So, why wait! Harness our potent databases
                               to draft customized messages for outstanding client response rates.</p>
